@@ -1,8 +1,8 @@
 lib_LTLIBRARIES = libvoikko.la
 libvoikko_la_SOURCES = voikko_suggest.c voikko_utils.c voikko_setup.c voikko_spell.c \
-                       voikko_hyphenate.c voikko_charset.c porting.c
-libvoikko_la_LDFLAGS = -no-undefined -version-info 5:0:4 @LIBLDFLAGSWIN@
-
+                       voikko_hyphenate.c voikko_charset.c porting.c \
+                       voikko_tokenize.c
+libvoikko_la_LDFLAGS = -no-undefined -version-info 6:0:5 @LIBLDFLAGSWIN@
 bin_PROGRAMS = voikkospell voikkohyphenate
 voikkospell_SOURCES = voikkospell.c porting.c
 voikkospell_CFLAGS = $(AM_CFLAGS)
